# gpt_your_data

./: .gitignore  README.md  pyproject.toml
gpt_your_data/: main.py
gpt_your_data/config/: database.py
gpt_your_data/config/migrations/: create_episodes_migration.py
gpt_your_data/models/: episode.py
gpt_your_data/repositories/: episode_repository.py
gpt_your_data/scripts/: crawl_data.py
gpt_your_data/services/: chat_gpt_service.py  faiss_service.py
